--- a/components/LetterBox.module.scss
+++ b/components/LetterBox.module.scss
@@ -1,4 +1,6 @@
 .LetterBox {
+@include shadow;
+
   font-size: 3em;
   height: 1em;
   width: 1em;
@@ -6,18 +8,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: $dark;
+  color: white;
+
+  border: 10px solid white;
+  border-bottom: 60px solid white;
 
   &.yes {
-    background-color: $yes;
+    color: $yes;
   }
 
   &.almost {
-    background-color: $almost;
+    color: $almost;
   }
 
-  &.no {
-    background-color: $no;
+  margin-right: 0.5em;
+  &:last-child {
+    margin-right: 0;
   }
+
 }
 
 .WordBox {
