--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,11 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800&display=swap');
 
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Space Grotesk', sans-serif;
-  font-weight: 500;
+  font-family: 'Inter', sans-serif;
+  font-weight: 800;
+  background-color: $light;
 }
 
 a {
