--- a/components/Keyboard.module.scss
+++ b/components/Keyboard.module.scss
@@ -3,19 +3,27 @@
   flex-direction: column;
   align-items: center;
 
+
   .row {
     display: flex;
     flex-direction: row;
     margin-bottom: 0.5em;
+
+  max-width: 100vw;
+
   }
 }
 
 @mixin pressed {
   transform: scale(0.9);
+  background-color: black;
+  color: darken(white,5%);
+  border-color: darken(white, 5%);
 }
 
 @mixin hover {
-  background-color: darken($dark, 30%);
+  // background-color: lighten($dark, 15%);
+
 }
 
 .Key {
@@ -36,7 +44,7 @@ cursor: pointer;
 
   background-color: $dark;
   color: white;
-  border: 5px solid white;
+  border: 0.15em solid white;
   border-radius: 3em;
 
   &:active {
@@ -44,8 +52,9 @@ cursor: pointer;
   }
 
   &.active {
-    @include pressed;
     @include hover;
+    @include pressed;
+
   }
 
   &:hover {
