--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -1,9 +1,27 @@
 .Home {
-  padding: 2em 0;
+  padding: 2em;
   height:100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
 
   justify-content: space-between;
+
+  max-width: 60em;
+  margin-left: auto;margin-right:auto;
+
+  .header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    font-weight: 500;
+
+    h1 {
+      margin:0;
+    }
+
+    align-items: flex-end;
+  }
 }
