--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@500;600;700;800&display=swap');
 
+
+@media screen and (max-width: 600px) {
+  html {
+    font-size: 10px;
+  }
+}
+
 html,
 body {
   padding: 0;
@@ -7,6 +14,8 @@ body {
   font-family: 'Inter', sans-serif;
   font-weight: 800;
   background-color: $light;
+
+  font-size: 12px;
 }
 
 a {
