Added dodgy text input.

--- a/components/LetterBox.module.scss
+++ b/components/LetterBox.module.scss
@@ -2,7 +2,9 @@
   @include shadow;
   @include unselectable;
 
-  cursor: text;
+  // cursor: text;
+
+  text-transform: uppercase;
 
   font-size: 3em;
   height: 1em;
