--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -1,6 +1,7 @@
 .Home {
   padding: 2em;
   height:100vh;
+  max-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -21,6 +22,8 @@
     h1 {
       margin:0;
     }
+
+    margin-bottom: 2em;
 
     align-items: flex-end;
   }
