--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -8,7 +8,7 @@
 
   justify-content: space-between;
 
-  max-width: 60em;
+  max-width: 500px;
   margin-left: auto;margin-right:auto;
 
   .header {
@@ -21,6 +21,19 @@
 
     h1 {
       margin:0;
+    }
+
+    nav {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+
+      a {
+        cursor:pointer;
+        margin-left: 1em;
+        margin-right: 1em;
+      }
     }
 
     margin-bottom: 2em;
