--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -16,11 +16,23 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-
+    flex-direction: row-reverse;
+    align-items: flex-end;
     font-weight: 500;
+    height: 3em;
+    position: relative;
 
-    h1 {
-      margin:0;
+    .logo {
+      position:absolute;
+      left:0;
+      bottom: 0;
+      display: flex;
+      flex-direction: column;
+      flex-flow: reverse;
+
+      h1 {
+        margin: 0;
+      }
     }
 
     nav {
