--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -57,6 +57,10 @@
         cursor:pointer;
         margin-left: 1em;
         margin-right: 1em;
+
+        &.active {
+          text-decoration: underline;
+        }
       }
     }
 
