--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -5,6 +5,8 @@
   flex-direction: column;
   align-items: center;
 
+  padding: 0 2em;
+
   max-width: 450px;
   margin-left: auto;margin-right:auto;
 
@@ -25,6 +27,7 @@
     font-weight: 500;
     height: 10vh;
     position: relative;
+
 
     .logo {
       position:absolute;
@@ -48,11 +51,14 @@
 
       a {
         cursor:pointer;
-        margin-left: 1em;
-        margin-right: 1em;
+        margin-right: 2em;
 
         &.active {
           text-decoration: underline;
+        }
+
+        &:last-of-type {
+          margin-right: 0;
         }
       }
     }
@@ -63,9 +69,10 @@
 }
 
 .page {
-  height: 80vh;
+  height: 85vh;
   width: 100%;
   padding-top: 5vh;
+  padding-bottom: 2.5vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -122,10 +129,11 @@
 }
 
 .game {
-  height: 85vh;
+  height: 84vh;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-bottom: 1vh;
 
   .gameZone {
     display: flex;
