--- a/components/Keyboard.module.scss
+++ b/components/Keyboard.module.scss
@@ -6,7 +6,7 @@
   .row {
     display: flex;
     flex-direction: row;
-    margin-bottom: 0.5em;
+    margin-top: 0.5em;
 
   max-width: 100vw;
 
@@ -30,7 +30,7 @@
 @include unselectable;
 cursor: pointer;
 
-  font-size: 1.3em;
+  font-size: 1.2em;
   width: 1em;
   height: 1em;
   padding: 1em;
@@ -63,5 +63,14 @@ cursor: pointer;
   margin-right: 0.5em;
   &:last-child {
     margin-right: 0;
+  }
+
+  @media (max-width: 500px) {
+    font-size: 1.2em;
+    width: 1em;
+    height: 1em;
+    padding: 1em;
+    border-radius: 2em;
+    margin-right: 0.2em;
   }
 }
