Adjusted healthbar logic.

--- a/components/HealthBar.module.scss
+++ b/components/HealthBar.module.scss
@@ -1,4 +1,16 @@
 .HealthBar {
+  display: flex;
+  flex-direction: row;
+
   color: $blue;
-  font-size: 3em;
+  font-size: 2em;
+
+  .heart {
+    margin-right: 0.1em;
+    @include shadow;
+  }
+
+  .used {
+    color: $dark;
+  }
 }
