--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -137,5 +137,11 @@
     flex-direction: column;
   }
 
+  .gui {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
   justify-content: space-between;
 }
