--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -36,11 +36,11 @@
       display: flex;
       flex-direction: column;
       flex-flow: reverse;
+      font-size: 1.6em;
+      font-weight: 600;
 
-      h1 {
-        margin: 0;
-        cursor: pointer;
-      }
+      margin: 0;
+      cursor: pointer;
     }
 
     nav {
