--- a/components/Hint.module.scss
+++ b/components/Hint.module.scss
@@ -2,7 +2,7 @@
   background-color: $dark;
   @include shadow;
   position: absolute;
-  top: 0;
+  top: 25px;
   color: white;
   padding: 1.5em;
   z-index: 1;
