--- a/components/Keyboard.module.scss
+++ b/components/Keyboard.module.scss
@@ -6,18 +6,16 @@
   .row {
     display: flex;
     flex-direction: row;
-    margin-top: 0.1em;
+    margin-top: 10px;
 
-  max-width: 100vw;
+    max-width: 100vw;
 
   }
 }
 
 @mixin pressed {
   transform: scale(0.9);
-  background-color: black;
-  color: darken(white,5%);
-  border-color: darken(white, 5%);
+  // background-color: darken(white, 10%);
 }
 
 @mixin hover {
@@ -26,13 +24,14 @@
 }
 
 .Key {
-@include shadow;
-@include unselectable;
-cursor: pointer;
+  @include shadow;
+  // @include outline;
+  @include unselectable;
+  cursor: pointer;
 
-  font-size: 1em;
+  font-weight: 600;
+  font-size: 16px;
   width: 1em;
-  height: 1em;
   padding: 1em;
 
   text-transform: capitalize;
@@ -41,10 +40,13 @@ cursor: pointer;
   align-items: center;
   justify-content: center;
 
-  background-color: $dark;
-  color: white;
-  border: 0.15em solid white;
-  border-radius: 3em;
+  background-color: $light;
+  color: $dark;
+  // border: 2px solid white;
+  border-radius: 5px;
+  @include outline;
+  border-bottom: $dark 2px solid;
+  border-right: $dark 2px solid;
 
   &:active {
     @include pressed;
@@ -66,11 +68,13 @@ cursor: pointer;
   }
 
   @media (max-width: 500px) {
-    font-size: 1.2em;
-    width: 1em;
-    height: 1em;
-    padding: 1em;
-    border-radius: 2em;
-    margin-right: 0.2em;
+    height: 3em;
+    font-size: 14px;
+    font-weight: 700;
+    // width: 1em;
+    // height: 1em;
+    // padding: 1em;
+    // border-radius: 2em;
+    // margin-right: 0.2em;
   }
 }
