Added toggles and removed settings page.

--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -104,6 +104,18 @@
       align-items: center;
     }
   }
+
+  .toggleBar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    p {
+      margin-left: 25px;
+    }
+
+    width: 200px;
+  }
 }
 
 .back {
