--- a/pages/Home.module.scss
+++ b/pages/Home.module.scss
@@ -83,13 +83,23 @@
 
 .stats {
 }
+.settings {
+  .toggleBar {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 
+    p {
+      margin-left: 25px;
+    }
+
+    width: 200px;
+  }
+}
 .about {
-  flex-grow: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: center;
 
   .hintContainer {
     display: flex;
@@ -102,19 +112,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
+      text-align: center;
     }
-  }
-
-  .toggleBar {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-
-    p {
-      margin-left: 25px;
-    }
-
-    width: 200px;
   }
 }
 
