--- a/components/HealthBar.module.scss
+++ b/components/HealthBar.module.scss
@@ -33,7 +33,7 @@
 
   &.active {
     &:before {
-      color: $blue;
+      color: $yellow;
       font-family: 'entypo', sans-serif;
   
       content: '♥';
