--- a/components/LetterBox.module.scss
+++ b/components/LetterBox.module.scss
@@ -1,16 +1,87 @@
+// import css variables from globals.scss
+
+
 .LetterBox {
-  @include outline;
   @include unselectable;
 
+  @include light {
+    @include outline;
+
+    background-color: $light-mode-dark;
+    color: $light-mode-light;
+    border: 4px solid $light-mode-light;
+    border-bottom: 12px solid $light-mode-light;
+
+    .inside {
+      @include outline-subtle;
+    }
+
+    &.yes {
+      background-color: $green;
+      color: $light-mode-dark;
+    }
+  
+    &.almost {
+      background-color: $yellow;
+      color: $light-mode-dark;
+    }
+  
+    &.inactive {
+      background-color: $light-mode-light;
+      color: $light-mode-dark;
+    }
+  }
+  
+  @include dark {
+    @include shadow;
+
+    background-color: $dark-mode-dark;
+    color: $dark-mode-light;
+    border: 4px solid $dark-mode-elevated;
+    border-bottom: 12px solid $dark-mode-elevated;
+
+    &.yes {
+      background-color: $red;
+      color: $dark-mode-light;
+    }
+  
+    &.almost {
+      background-color: $orange;
+      color: $dark-mode-light;
+    }
+  
+    &.inactive {
+      background-color: $dark-mode-dark;
+      color: $dark-mode-light;
+    }
+  }
+
   position: relative;
+  cursor: text;
+  text-transform: uppercase;
+  font-size: 20px;
+  height: 1em;
+  width: 1em;
+  padding: 1em;
+  font-weight: 700;
+  margin-right: 0.8em;
+
+  &.yes {
+    cursor: default;
+  }
+
+  &.no {
+    cursor: default;
+  }
+
+  &.almost {
+    cursor: default;
+  }
 
   .inside {
-    @include outline-subtle;
-
     width: 1em;
     height: 1em;
     padding: 1em;
-
     position: absolute;
     top:0;
     left:0;
@@ -19,51 +90,14 @@
     justify-content: center;
   }
 
-  cursor: text;
-
-  text-transform: uppercase;
-
-  font-size: 20px;
-  height: 1em;
-  width: 1em;
-  padding: 1em;
-  
-  background-color: $dark;
-  color: $light;
-
-  font-weight: 700;
-
-  border: 4px solid white;
-  border-bottom: 12px solid white;
-
   .focused {
-    background-color:white;
+    background-color: white;
     width: 1em;
     height: 2px;
     position: absolute;
     bottom: 0.5em;
     left: 0.5em;
   }
-
-  &.yes {
-    background-color: $yes;
-    color: $dark;
-    cursor: default;
-  }
-
-  &.almost {
-    cursor: default;
-    color: $dark;
-    background-color: $almost;
-  }
-
-  &.inactive {
-    cursor: default;
-    color: $dark;
-    background-color: $light;
-  }
-
-  margin-right: 0.8em;
 
   &:last-of-type {
     margin-right: 0;
