--- a/components/Toggle.module.scss
+++ b/components/Toggle.module.scss
@@ -1,48 +1,56 @@
 .Toggle {
+  @include light {
+    background-color: $light-mode-light;
+    border: 2px solid $light-mode-dark;
+
+    .inner {
+      border: 1px solid $light-mode-dark;
+      background-color: $light-mode-light;
+    }
+
+    &.active {
+      background-color: $light-mode-dark;
+    }
+  }
+
+  @include dark {
+    background-color: $dark-mode-dark;
+    @include shadow;
+
+    .inner {
+      background-color: $dark-mode-light;
+    }
+
+    &.active {
+      background-color: $red;
+    }
+  }
+
   width: 40px;
   height: 22px;
   border-radius: 22px;
   position: relative;
   cursor: pointer;
-  background-color: $light;
   transition: background-color 0.1s linear;
-
-  border: 2px solid $dark;
   box-sizing: content-box;
-
 
   .inner {
     width: 18px;
     height: 18px;
     border-radius: 24px;
-
-    border: 1px solid $dark;
-
-    background-color: $light;
-
-
     position: absolute;
     z-index: 1000;
-
     left: 2px;
     top: 2px;
-
     transition: left 0.1s ease-out;
   }
 
   &.active {
-    background-color: $dark;
     transition: background-color 0.1s linear;
-
 
     .inner {
       left: 20px;
-
       transition: left 0.1s ease-out;
     }
-
-
   }
-
-  
 }
