--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,13 +7,21 @@
   }
 }
 
-html,
 body {
+  @include dark {
+    background-color: $dark-mode-dark;
+    color: $dark-mode-light;
+  }
+
+  @include light {
+    background-color: $light-mode-light;
+    color: $light-mode-dark;
+  }
+
   padding: 0;
   margin: 0;
   font-family: 'Inter', sans-serif;
   font-weight: 500;
-  background-color: $light;
   font-size: 12px;
 }
 
