Replaced header dark mode toggle with cool emoji!

--- a/components/Header.module.scss
+++ b/components/Header.module.scss
@@ -14,6 +14,14 @@
     height: 60px;
   }
 
+  .themeButton {
+    background: none;
+    border:none;
+    cursor: pointer;
+    font-size: 2em;
+    margin-left: -0.2em;
+  }
+
   .logo {
     position:absolute;
     left:0;
