--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -9,11 +9,12 @@ $light-mode-dark: #2A272D;
 $light-mode-light: #FFFFF6;
 
 $dark-mode-light: #EAEEF4;
-$dark-mode-dark: #2A272D;
+$dark-mode-dark: #242326;
 $dark-mode-elevated: #403B45;
+$dark-mode-darker: #151515;
 
 @mixin shadow {
-  filter: drop-shadow(4px 4px 10px rgba(0, 0, 0, 0.4)); 
+  filter: drop-shadow(2px 4px 2px rgba(0, 0, 0, 0.25)); 
 }
 
 @mixin inner-shadow {
@@ -32,20 +33,20 @@ $dark-mode-elevated: #403B45;
 
 }
 
-@mixin text-outline {
-  -webkit-text-stroke: $light-mode-dark 2px;
+@mixin text-outline ($color) {
+  -webkit-text-stroke: $color 2px;
 }
 
-@mixin outline {
-  outline: 2px solid $light-mode-dark;
+@mixin outline ($color) {
+  outline: 2px solid $color;
 }
 
-@mixin outline-subtle {
-  outline: 1px solid $light-mode-dark;
+@mixin outline-subtle ($color) {
+  outline: 1px solid $color;
 }
 
 @mixin dark {
-   &[data-theme="dark"] {
+  &[data-theme="dark"] {
     @content;
   }
   [data-theme="dark"] & {
